--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "To-do list manager for team projects",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,17 @@
   },
   "homepage": "https://github.com/DeccaVieira/trellado#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "joi": "^17.7.0",
+    "pg": "^8.8.0",
+    "pkg": "^5.8.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.15",
+    "@types/pg": "^8.6.6",
+    "nodemon": "^2.0.20",
+    "typescript": "^4.9.4"
   }
 }
